# fastmcp-coolness

./: .envrc  .gitignore  .mcp.json  CLAUDE.md  README.md  echo_server.py  pyproject.toml  requirements.txt  test_echo_server.py  v1_server.py
